customized to prototype API
